dataset1235/2025-2/1153765216/users/3146567693/executions/2814675586_1559799913.log
== SUBMISSION (2025-08-26 18:43:32)
-- CODE: 
numero = int(input("digite um número: ")
quadrado = numero ** 2
print(f"{quadrado}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = int(input("digite um número: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = int(input("digite um número: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = int(input("digite um número: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = int(input("digite um número: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = int(input("digite um número: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = int(input("digite um número: ")
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:45:10)
-- CODE: 
n1 = int(input("digite um número: "))
quadrado = n1 ** 2

print(f"n1")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
digite um número: n1
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
digite um número: n1
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
digite um número: n1
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
digite um número: n1
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
digite um número: n1
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
digite um número: n1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:45:38)
-- CODE: 
n1 = int(input("digite um número: "))
quadrado = n1 ** 2

print(f"{quadrado}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
digite um número: 4
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
digite um número: 0
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
digite um número: 1000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
digite um número: 100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
digite um número: 225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
digite um número: 14400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:41:33)
-- CODE: 
numero = int(input("digite um número: ")
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = int(input("digite um número: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = int(input("digite um número: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = int(input("digite um número: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = int(input("digite um número: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = int(input("digite um número: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = int(input("digite um número: ")
                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:45:44)
-- CODE: 
n1 = int(input("digite um número: "))
quadrado = n1 ** 2

print(f"{quadrado}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
digite um número: 4
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
digite um número: 0
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
digite um número: 1000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
digite um número: 100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
digite um número: 225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
digite um número: 14400
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
